Checking in some Java 5 changes
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@5003 51baf565-9d33-0410-a72c-fc3788e3496d